--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="icon" href="../src/image/phoneX.png" type="image/gif">
+    <link rel="icon" href="%PUBLIC_URL%/phone.ico" />
 
     <title>PhoneX-Trang web mua bán điện thoại tốt nhất , uy tín số 1 Việt Nam</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
